--- a/app/src/main/res/menu/rate.xml
+++ b/app/src/main/res/menu/rate.xml
@@ -5,4 +5,7 @@
     <item
         android:id="@+id/menu_set"
         android:title="@string/menu_set_label" />
+    <item
+        android:id="@+id/open_list"
+        android:title="@string/lable_open_list" />
 </menu>
